Fix icon alignment in burger menu (was cropped on Safari)

--- a/src/scss/includes/menu.scss
+++ b/src/scss/includes/menu.scss
@@ -131,7 +131,8 @@
   }
 
   .menu__panel__action__icon {
-    margin: -5px 20px 0 0;
+    margin: -4px 20px 0 0;
+    padding: 4px 0;
     font-size: 22px;
     vertical-align: middle;
   }
